make cubic for link

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -195,7 +195,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -207,7 +207,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -219,7 +219,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -246,7 +246,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -258,7 +258,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -270,7 +270,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -282,7 +282,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -309,7 +309,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -321,7 +321,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -333,7 +333,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -345,7 +345,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -372,7 +372,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -384,7 +384,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -396,7 +396,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -408,7 +408,7 @@
                   <li class="social-item">
                     <a
                       href=""
-                      class="social-link"
+                      class="social-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
                     >
@@ -432,7 +432,7 @@
             <li class="customer-list-item item">
               <a
                 href=""
-                class="customer-link"
+                class="customer-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -444,7 +444,7 @@
             <li class="customer-list-item item">
               <a
                 href=""
-                class="customer-link"
+                class="customer-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -456,7 +456,7 @@
             <li class="customer-list-item item">
               <a
                 href=""
-                class="customer-link"
+                class="customer-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -468,7 +468,7 @@
             <li class="customer-list-item item">
               <a
                 href=""
-                class="customer-link"
+                class="customer-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -480,7 +480,7 @@
             <li class="customer-list-item item">
               <a
                 href=""
-                class="customer-link"
+                class="customer-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -492,7 +492,7 @@
             <li class="customer-list-item item">
               <a
                 href=""
-                class="customer-link"
+                class="customer-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -543,7 +543,7 @@
             <li class="social-item">
               <a
                 href=""
-                class="social-link"
+                class="social-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -555,7 +555,7 @@
             <li class="social-item">
               <a
                 href=""
-                class="social-link"
+                class="social-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -567,7 +567,7 @@
             <li class="social-item">
               <a
                 href=""
-                class="social-link"
+                class="social-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -579,7 +579,7 @@
             <li class="social-item">
               <a
                 href=""
-                class="social-link"
+                class="social-link link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
