--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 width="370"
                 height="294"
               />
+              <p class="wwd-item-text">Десктопные приложения</p>
             </li>
             <li class="wwd-item item">
               <img
@@ -150,6 +151,7 @@
                 width="370"
                 height="294"
               />
+              <p class="wwd-item-text">Мобильные приложения</p>
             </li>
             <li class="wwd-item item">
               <img
@@ -158,6 +160,7 @@
                 width="370"
                 height="294"
               />
+              <p class="wwd-item-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
