--- a/portfolio.html
+++ b/portfolio.html
@@ -97,12 +97,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img1.jpg"
-                  alt="ноутбук с открытой интернет страницей"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img1.jpg"
+                    alt="ноутбук с открытой интернет страницей"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title">Технокряк</h2>
                   <p class="projects-list-text">Веб-сайт</p>
