--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,6 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title">Технокряк</h2>
                   <p class="projects-list-text">Веб-сайт</p>
@@ -124,12 +123,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img2.jpg"
-                  alt="двое мужчин играют в баскетболл"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img2.jpg"
+                    alt="двое мужчин играют в баскетболл"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -145,12 +152,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img3.jpg"
-                  alt="логотип рыбного ресторана"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img3.jpg"
+                    alt="логотип рыбного ресторана"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title">
                     Ресторан <span lang="en">Seafood</span>
@@ -166,12 +181,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img4.jpg"
-                  alt="музыкальные наушники"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img4.jpg"
+                    alt="музыкальные наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title">
                     Проект <span lang="en">Prime</span>
@@ -187,12 +210,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img5.jpg"
-                  alt="две коробки, белая и коричневая"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img5.jpg"
+                    alt="две коробки, белая и коричневая"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title">
                     Проект <span lang="en">Boxes</span>
@@ -208,12 +239,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img6.jpg"
-                  alt="монтор с чёрной рамкой и серебристой подставкой"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img6.jpg"
+                    alt="монтор с чёрной рамкой и серебристой подставкой"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title" lang="en">
                     Inspiration has no Borders
@@ -229,12 +268,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img7.jpg"
-                  alt="книга с илюстрациями"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img7.jpg"
+                    alt="книга с илюстрациями"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title">
                     Издание <span lang="en">Limited Edition</span>
@@ -250,12 +297,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img8.jpg"
-                  alt="бирка с надписью"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img8.jpg"
+                    alt="бирка с надписью"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title">
                     Проект <span lang="en">LAB</span>
@@ -271,12 +326,20 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <img
-                  src="./images/port-img9.jpg"
-                  alt="человек работает с ноутбуком"
-                  width="370"
-                  height="294"
-                />
+                <div class="projects-item-wrap">
+                  <img
+                    src="./images/port-img9.jpg"
+                    alt="человек работает с ноутбуком"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-item-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="projects-card-footer">
                   <h2 class="title projects-list-title" lang="en">
                     Growing Business
